create update user works perfectly. Message on manage_profile is displayed after submit